<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_date_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="it.libero.alessandragenca.notemanagerandroidclient.GetByDateActivity">






    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text=""
        android:textColor="@android:color/black"
        android:textSize="8sp"
        android:layout_marginBottom="113dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/dateButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="?android:attr/colorAccent"
        android:text="Get Date"
        android:layout_marginTop="44dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <Button
        android:id="@+id/buttongetnotesbydate"
        android:layout_width="200dp"
        android:layout_height="50dp"

        android:backgroundTint="@android:color/holo_blue_bright"
        android:text="Get Note By Date"
        android:layout_below="@+id/dateButton"
        android:layout_alignLeft="@+id/dateButton"
        android:layout_alignStart="@+id/dateButton"
        android:layout_marginTop="44dp" />


</RelativeLayout>



