<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="it.libero.alessandragenca.notemanagerandroidclient.MainActivity">

    <TextView
        android:id="@+id/notetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text=" Note registry client: select an option"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />


    <Button
        android:id="@+id/buttonGETNOTEBYDATE"
        android:layout_width="150dp"

        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/buttonremove2"
        android:background="@android:color/holo_blue_bright"
        android:text="Get Note By Date"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <Button
        android:id="@+id/buttonget"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_above="@+id/buttonremove"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="69dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:text="Get Note "
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <Button
        android:id="@+id/buttonput"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/buttonremove"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:text="Modify Note"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_alignTop="@+id/buttonremove" />

    <Button
        android:id="@+id/buttonadd"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:text=" Add Note"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_alignBaseline="@+id/buttonget"
        android:layout_alignBottom="@+id/buttonget"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/buttonremove"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_above="@+id/buttonremove2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="71dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:text=" Remove Note"
        android:textAppearance="@style/TextAppearance.AppCompat" />


    <Button
        android:id="@+id/buttonremove2"
        style="@android:style/Widget.Button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_above="@+id/buttonGetAllNotes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="77dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:text=" Remove All Notes"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="14sp" />


    <Button
        android:id="@+id/buttonGetAllNotes"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"

        android:layout_alignParentStart="true"
        android:background="@android:color/holo_blue_bright"
        android:text="Get All Notes"
        android:textAppearance="@style/TextAppearance.AppCompat" />


    <Button
        android:id="@+id/buttonGetsize"
        android:layout_width="150dp"
        android:layout_height="50dp"

        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/holo_blue_bright"
        android:text="Number of Note"
        android:textAppearance="@style/TextAppearance.AppCompat" />

</RelativeLayout>
